[gd_scene load_steps=8 format=3 uid="uid://cdir8ktknml01"]

[ext_resource type="Script" path="res://player_2.gd" id="1_vx1fn"]
[ext_resource type="PackedScene" uid="uid://cnuq4jmmhxkjt" path="res://resources/player_animations/azki_animation.tscn" id="2_ijgoj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3b4m"]
size = Vector2(11, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbnw6"]
size = Vector2(11, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_swviq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qb0ma"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hb5yx"]
size = Vector2(10, 10)

[node name="Player2" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 79
input_pickable = true
motion_mode = 1
script = ExtResource("1_vx1fn")

[node name="CollisionHitBox" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_n3b4m")

[node name="CombatHitBoxArea" type="Area2D" parent="."]

[node name="CombatHitBoxShape" type="CollisionShape2D" parent="CombatHitBoxArea"]
position = Vector2(0.5, -6.5)
shape = SubResource("RectangleShape2D_fbnw6")

[node name="AZKiAnimation" parent="." instance=ExtResource("2_ijgoj")]
animation = &"death"
frame_progress = 0.0

[node name="NpcDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 66

[node name="NpcDetectionShape" type="CollisionShape2D" parent="NpcDetectionArea"]
position = Vector2(0.5, -6)
scale = Vector2(1.9952, 2)
shape = SubResource("CircleShape2D_swviq")

[node name="EntitiesDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="EntitiesDetectionShape" type="CollisionShape2D" parent="EntitiesDetectionArea"]
position = Vector2(0.5, -6.5)
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_qb0ma")

[node name="InnerAllyArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="InnerAllyShape" type="CollisionShape2D" parent="InnerAllyArea"]
position = Vector2(0.5, -6.5)
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_qb0ma")

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AttackShape" type="ShapeCast2D" parent="."]
position = Vector2(0.666667, -6)
shape = SubResource("RectangleShape2D_hb5yx")
target_position = Vector2(14.1667, 14.6667)
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.784314, 0.647059, 0.00784314, 1)
z_index = 1
offset_left = -6.0
offset_top = -18.5
offset_right = 124.0
offset_bottom = 2.5
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
max_value = 200.0
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="."]
modulate = Color(0.784314, 0.647059, 0.00784314, 1)
z_index = 1
offset_left = -6.0
offset_top = 5.5
offset_right = 124.0
offset_bottom = 15.5
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
max_value = 200.0
show_percentage = false

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="DirectionCooldown" type="Timer" parent="."]
one_shot = true

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true

[node name="AllyAttackCooldown" type="Timer" parent="."]

[connection signal="input_event" from="CombatHitBoxArea" to="." method="_on_combat_hit_box_area_input_event"]
[connection signal="body_entered" from="NpcDetectionArea" to="." method="_on_npc_detection_area_body_entered"]
[connection signal="body_exited" from="NpcDetectionArea" to="." method="_on_npc_detection_area_body_exited"]
[connection signal="body_exited" from="EntitiesDetectionArea" to="." method="_on_entities_detection_area_body_exited"]
[connection signal="body_entered" from="InnerAllyArea" to="." method="_on_inner_ally_area_body_entered"]
[connection signal="body_exited" from="InnerAllyArea" to="." method="_on_inner_ally_area_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="DirectionCooldown" to="." method="_on_direction_cooldown_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
[connection signal="timeout" from="AllyAttackCooldown" to="." method="_on_ally_attack_cooldown_timeout"]
